[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Ubuntu-L20.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/options.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/themes/new_gui/neon.tres" type="Theme" id=5]
[ext_resource path="res://Scenes/Feedback.tscn" type="PackedScene" id=6]

[node name="PauseMenu" type="Panel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -206.5
margin_right = 138.5
margin_bottom = 206.5
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitTOMenuDIalog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 124.0
rect_min_size = Vector2( 150, 52.5 )
window_title = ""
dialog_text = "Do You really want to quit the game?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" parent="." instance=ExtResource( 6 )]

[node name="Buttons" type="VBoxContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Buttons"]
pause_mode = 2
margin_right = 277.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Resume"

[node name="Restart" type="Button" parent="Buttons"]
pause_mode = 2
margin_top = 83.0
margin_right = 277.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Restart"

[node name="Options" type="Button" parent="Buttons"]
pause_mode = 2
margin_top = 166.0
margin_right = 277.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Options"

[node name="FeedBack" type="Button" parent="Buttons"]
pause_mode = 2
margin_top = 250.0
margin_right = 277.0
margin_bottom = 329.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Feedback"

[node name="QuitGame" type="Button" parent="Buttons"]
pause_mode = 2
margin_top = 333.0
margin_right = 277.0
margin_bottom = 413.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Quit to Main Menu"

[node name="Control" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[connection signal="confirmed" from="QuitTOMenuDIalog" to="." method="_on_QuitTOMenuDIalog_confirmed"]
[connection signal="pressed" from="Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/FeedBack" to="." method="_on_FeedBack_pressed"]
[connection signal="pressed" from="Buttons/QuitGame" to="." method="_on_QuitGame_pressed"]
